--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
-<!doctype.html>
-<html.lang="pt-BR">
-  <head>
-<H1>O livro do Jumento</H1>
-<p1>O livro do jumento conta como ele vivia na natureza e como chegou esse nome a ele.</p1>
-<p2>Jumentino era alguém animado até algum começar a usar ele como burro de carga.</p2>
-<p3>Ele se revoltou com esse acontecimento e logo começou a descontar em outras pessoas</p3>
-  </head>
+<!DOCTYPE html>
+<html lang="pt-BR">
+<meta charset="UTF-8">
+<title>O livro do Jumento</title>
+<head>
+<body>
+<h1>O Jumento</h1>
+<p>O livro do jumento conta como ele vivia na natureza e como chegou esse nome a ele.</p>
+<p>Jumentino era alguém animado até algum começar a usar ele como burro de carga.</p>
+<p>Ele se revoltou com esse acontecimento e logo começou a descontar em outras pessoas</p>
+</head>
   
+
